# dailylog

./: AGENTS.md  Cargo.toml  README.md
src/: config.rs  display.rs  entry.rs  git.rs  main.rs  summary.rs
