[package]
name = "dailylog"
version = "0.1.0"
description = "Minimal journaling tool"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cetanu/dailylog"
authors = ["Vasilios Syrakis"]
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["journal", "diary", "log", "notes", "terminal"]
exclude = ["target", "Cargo.lock"]
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
dirs = "6.0.0"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.0", features = ["derive"] }
termcolor = "1.4"
